@@ -1,7 +1,7 @@
 .\" $Id: pkg_replace.1,v 1.2 2007/01/25 12:25:56 securedog Exp $
 .\"
-.\" Modified by Ken DEGUCHI (June 22, 2020)"
-.Dd June 22, 2020
+.\" Modified by Ken DEGUCHI (July  1, 2020)"
+.Dd July  1, 2020
 .Dt PKG_REPLACE 1
 .Os
 .Sh NAME
